--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite:
+  path:
+  provider:
+  flutter_localizations:
+    sdk: flutter
+  intl:
+  flutter_svg:
+  uuid:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core:
+  firebase_remote_config: ^2.0.13
+  firebase_analytics: ^9.3.0
+  firebase_crashlytics:
 
 dev_dependencies:
   flutter_test:
@@ -52,11 +63,20 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+  generate: true
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+     - family: Roboto
+       fonts:
+         - asset: fonts/Roboto-Regular.ttf
+         - asset: fonts/Roboto-Medium.ttf
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
