--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,9 @@ dependencies:
   logging:
   table_calendar:
   flutter_bloc: ^8.1.1
-  freezed: ^2.1.0+1
   flutter_riverpod: ^1.0.4
+  freezed_annotation: ^2.1.0
+  json_annotation: ^4.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +64,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner:
+  freezed: ^2.1.0+1
+  analyzer: ^4.6.0
+  json_serializable: ^6.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
