--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,10 +52,12 @@ dependencies:
   firebase_remote_config: ^2.0.13
   firebase_analytics: ^9.3.0
   firebase_crashlytics:
-  flutter_flavorizr: ^2.1.4
+  flutter_flavorizr: ^2.1.3
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter
+  integration_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -68,6 +70,9 @@ dev_dependencies:
   freezed: ^2.1.0+1
   analyzer: ^4.6.0
   json_serializable: ^6.3.1
+
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
